lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__hd7870.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": null,
  "info": {
    "driver": "radeon",
    "drm_info": {
      "vram_clock_ratio": 1.0
    },
    "flags": [
      "ConfigurableFanControl"
    ],
    "link_info": {
      "current_speed": "8.0 GT/s PCIe",
      "current_width": "1"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Pitcairn XT [Radeon HD 7870 GHz Edition]",
        "model_id": "6818",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model": "Sapphire HD 7870",
        "model_id": "E217",
        "vendor": "PC Partner Limited / Sapphire Technology",
        "vendor_id": "174B"
      }
    },
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Pitcairn XT [Radeon HD 7870 GHz Edition]",
      "model_id": "6818",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model": "Sapphire HD 7870",
      "model_id": "E217",
      "vendor": "PC Partner Limited / Sapphire Technology",
      "vendor_id": "174B"
    }
  },
  "power_profile_modes": null,
  "power_states": {
    "core": [],
    "vram": []
  },
  "stats": {
    "clockspeed": {
      "gpu_clockspeed": 300,
      "sensors": {}
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {},
      "pwm_current": 51,
      "pwm_max": 255,
      "pwm_min": 0
    },
    "power": {},
    "temps": {
      "1": {
        "crit": 120.0,
        "crit_hyst": 90.0,
        "current": 27.0,
        "display_only": false,
        "primary": true
      }
    },
    "voltage": {
      "sensors": {}
    },
    "vram": {}
  }
}
