lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__r9-280.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": null,
  "info": {
    "driver": "amdgpu",
    "drm_info": {
      "vram_clock_ratio": 1.0
    },
    "flags": [
      "ConfigurableFanControl"
    ],
    "link_info": {
      "current_speed": "5.0 GT/s PCIe",
      "current_width": "8"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Tahiti PRO [Radeon HD 7950/8950 OEM / R9 280]",
        "model_id": "679A",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model": "GIGABYTE R9 280 WindForce 3X",
        "model_id": "229A",
        "vendor": "Gigabyte Technology Co., Ltd",
        "vendor_id": "1458"
      }
    },
    "vbios_version": "xxx-xxx-xxx",
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Tahiti PRO [Radeon HD 7950/8950 OEM / R9 280]",
      "model_id": "679A",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model": "GIGABYTE R9 280 WindForce 3X",
      "model_id": "229A",
      "vendor": "Gigabyte Technology Co., Ltd",
      "vendor_id": "1458"
    }
  },
  "power_profile_modes": null,
  "power_states": {
    "core": [],
    "vram": []
  },
  "stats": {
    "clockspeed": {
      "gpu_clockspeed": 300,
      "sensors": {},
      "vram_clockspeed": 150
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {},
      "pwm_current": 139,
      "pwm_max": 255,
      "pwm_min": 0
    },
    "power": {},
    "temps": {
      "edge": {
        "crit": 120.0,
        "crit_hyst": 90.0,
        "current": 37.0,
        "display_only": false,
        "primary": true
      }
    },
    "voltage": {
      "sensors": {}
    },
    "vram": {}
  }
}
